--- a/Develop/index.html
+++ b/Develop/index.html
@@ -42,6 +42,7 @@
             <label class="label" > 0-9</label>
             <input class ="input-symbol" type="checkbox">
             <label class="label"> !@#$</label>
+            <button id="go">Go</button>
           </div>
         </div>
 <!-- end -->
